# generate_pdf

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: divider.rs  main.rs  messenger.rs  pdf.rs  utils.rs
